Scene 1 spawns 2 enemies, killing them sends you scene 2
Now to make scene 2 as operation as scene 1

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Assets\Scripts\EnemyMove.cs" />
     <Compile Include="Assets\Scripts\EnemySpawn.cs" />
     <Compile Include="Assets\Scripts\Followplayer.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\LevelNumTrack.cs" />
     <Compile Include="Assets\Scripts\Playermove.cs" />
     <Compile Include="Assets\Scripts\Shooting.cs" />
     <Compile Include="Assets\Scripts\StartGame.cs" />
